--- a/nginx/search.conf
+++ b/nginx/search.conf
@@ -1,5 +1,13 @@
 location /search/ {
     proxy_pass http://localhost:8004/;
+    proxy_connect_timeout 1200;
+    proxy_read_timeout 1200;
+}
+
+location /search-api/ {
+    proxy_pass http://localhost:8084/;
+    proxy_connect_timeout 1200;
+    proxy_read_timeout 1200;
 }
 
 location /searchserver/ {
