--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,28 +4,28 @@ services:
     image: dtlfair/metadata-editor:2.1
     container_name: editor
     ports:
-      - "127.0.0.1:8001:80"
+      - "8001:80"
     restart: unless-stopped
     volumes:
-      - /data/apps/editor/config:/usr/share/nginx/html/conf
+      - ./data/editor/config:/usr/share/nginx/html/conf
   
   fairifier:
     image: dtlfair/fairifier
     container_name: fairifier
     ports:
-      - "127.0.0.1:8002:3333"
+      - "8002:3333"
     depends_on:
       - virtuoso
     restart: unless-stopped
     volumes:
-      - /data/apps/fairifier/data:/fairifier_data
-      - /data/apps/fairifier/config:/configuration
+      - ./data/fairifier/data:/fairifier_data
+      - ./data/fairifier/config:/configuration
 
   fdp:
-    image: fairdata/fairdatapoint:august2018
+    image: fairdata/fairdatapoint:1.0.0
     container_name: fdp
     ports:
-      - "127.0.0.1:8003:8080"
+      - "8003:80"
     depends_on:
       - agraph
     restart: unless-stopped
@@ -34,9 +34,9 @@ services:
     image: dtlfair/search:develop
     container_name: search
     ports:
-      - "127.0.0.1:8004:80"
-      - "127.0.0.1:8084:8080"
-      - "127.0.0.1:9200:9200"
+      - "8004:80"
+      - "8084:8080"
+      - "9200:9200"
     environment:
       - "ES_URL=http://localhost/searchserver"
     restart: unless-stopped
@@ -45,12 +45,30 @@ services:
     image: tenforce/virtuoso
     container_name: virtuoso
     ports:
-      - "127.0.0.1:8890:8890"
+      - "8890:8890"
     restart: unless-stopped
 
   agraph:
     image: franzinc/agraph:v6.1.1
     container_name: agraph
     ports:
-      - "127.0.0.1:10035:10035"
+      - "10035:10035"
     restart: unless-stopped
+
+  fdpclient:
+    image: fairdata/fairdatapoint-client:1.0.0
+    container_name: fdpclient
+    restart: unless-stopped
+    ports:
+      - 8005:80
+    environment:
+      - FDP_HOST=fdp
+
+  mongo:
+    image: mongo:4.0.12
+    restart: unless-stopped
+    ports:
+      - 27017:27017
+    volumes:
+        - ./data/mongo:/data/db
+    command: mongod
